--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.app {
+  padding-top: 5rem;
+  margin: 0 auto;
+  width: 50%;
+}
+
+.root {
+  display: flex;
+  padding: 0;
+}
+
+.input {
+  padding: 0.2rem;
+  font-size: 1.5rem;
+  width: 100%;
+}
+
+.app .button {
+  margin-bottom: 0.5rem;
+  margin-left: 0.5rem;
+}
