--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,9 @@ code {
 .texts li {
     list-style-type: none;
 }
+
+.button-clear {
+  color: red;
+  transition: transform 5s ease;
+  transform: rotate(360deg);
+}
