--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
 
 .app {
@@ -18,9 +18,10 @@ code {
   width: 50%;
 }
 
-.root {
+.MuiPaper-rounded {
   display: flex;
   padding: 0;
+  border-radius: 3rem;
 }
 
 .input {
@@ -40,7 +41,7 @@ code {
 }
 
 .texts li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .button-clear {
