--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,8 @@ code {
 }
 
 .texts {
-  padding: 0.5rem;
-  font-size: 1.2rem;
+  padding-top: 0.5rem;
+  /*font-size: 1.2rem;*/
 }
 
 .texts li {
