add change language

--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,9 @@ code {
   width: 100%;
 }
 
-.app .button {
-  margin-left: 0.5rem;
-}
+/*.app .button {*/
+/*  margin-left: 0.5rem;*/
+/*}*/
 
 .texts li {
   list-style-type: none;
